--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/alt-Anurag/snapshop-anuarg.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Anurag Kumar Jha",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alt-Anurag/snapshop-anuarg/issues"
