--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "dependencies": {
     "@google/generative-ai": "^0.1.0",
-    "@supabase/supabase-js": "^2.21.0",
-    "@tensorflow/tfjs-node": "^4.2.0",
-    "@tensorflow-models/mobilenet": "^2.1.0",
-    "node-fetch": "^3.3.1"
+    "@supabase/supabase-js": "^2.21.0"
   }
 }
